# iot-inspector-client

./: .gitattributes  .gitignore  DesignDoc.md  IoT Inspector.lnk  LICENSE  LICENSE.txt  MANIFEST.in  README.md  SECURITY.md  common.py  dashboard.py  device_detail_page.py  device_list_page.py  generate_systemctl_config.py  install.ps1  install.sh  install_linux.sh  iot-inspector.nsi  iot_app_runner.bat  iot_app_runner.sh  linux-setup.sh  main.py  nsis.ps1  overview_page.py  page_manager.py  pyproject.toml  requirements.txt  settings_page.py  setup.py  sidebar.py  start.bash  start.bat  start.ps1  ubuntu-install-test.sh  ubuntu-install.sh  ubuntu-start-inspector-test.sh  ubuntu-start-inspector.sh  uninstall.ps1  uninstall_linux.sh  utils.py
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report_general.md  feature_request.md
.github/workflows/: create_release.yml  go-ci.yml  inspector_test.yaml  labeler.yml  visualization_tests.yml
.streamlit/: config.toml
IoT-Inspector-Package/: IoT Inspector.lnk  README.txt
IoT-Inspector-Package/3rd-party-software/: README.txt
IoT-Inspector-Package/script/: start.py
analysis/: traffic_rate.py
archive/: LICENSE  SECURITY.md  inspector.py  requirements-general.txt
archive/IoT-Inspector-Package/: README.txt
archive/core/: anonymization.py  arp_scanner.py  arp_spoofer.py  config.py  deferred_action.py  networking.py  start.py  tls_processor.py  wireshark_oui_database.txt
archive/ui/: Device_List.py  common.py  survey.py  template.py
core/: arp_spoofer.py  banner_grabber.py  common.py  common_test.py  data_donation.py  dnssd_scanner.py  friendly_organizer.py  global_state.py  model.py  networking.py  nmap_wrapper.py  oui_parser.py  packet_collector.py  packet_processor.py  ssdp_scanner.py  ssdp_scanner_test.py  start.py  tcp_scanner.py  timed_cache.py  ttl_cache.py
data/: android-tds.json  apple-tds.json  tds.json
deploy/: IoT Inspector.lnk
event_detection/: burst_processor.py  feature_generation.py  feature_standardization.py  global_state.py  model_selection.py  packet_processor.py  periodic_filter.py  predict_event.py  readme.md  utils.py
frontend/: dashboard.py  traffic_simulator.py
go/: README.md  go.mod  go.sum
inspector/: api_models.py  api_server.py  apiserver.py  arp_spoof.py  common_functions.py  configs.schema.sql  data_upload.py  deploy_test.bash  generate_mock_data.py  host_state.py  inspector.py  inspector_test.bash  local_data.py  models.py  netdisco_wrapper.py  network_traffic.schema.sql  oui.txt  oui_parser.py  packet_processor.py  requirements.txt  settings.py  start.py  utils.py
installation_files/: iot-inspector.conf  iot-inspector.service
new/: README.md
old_src/: .gitignore  arp_scan.py  arp_spoof.py  host_state.py  linux-install-dependencies.sh  linux-start-inspector.sh  packet_capture.py  update_inspector.sh
privacy-agent/: llm_prompts.py  wifi_monitor_llm_agent.py
privacy_agent/: llm_prompts.py
restful_inspector/: db_models.py  db_operations.py  start.py
src/: .gitignore  README.md  arp_scan.py  arp_spoof.py  available_ports_raw.txt  build-windows.bat  cp_plist.sh  data_upload.py  flow_upload.py  get_default_browser.py  host_state.py  inspector.py  inspector_local_server.py  linux-install-dependencies.sh  linux-start-inspector-venv.sh  linux-start-inspector.sh  netdisco_wrapper.py  packet_capture.py  packet_processor.py  parse_available_ports.py  requirements-mac.txt  requirements-windows.txt  requirements.txt  requirements_mac.txt  server_config.py  start_inspector.py  start_inspector_win.spec  syn_scan.py  ui.py  utils.py
src/iot_inspector/: common.py  dashboard.py  device_detail_page.py  device_list_page.py  main.py  overview_page.py  page_manager.py  settings_page.py
src/libinspector/: common.py  dashboard.py  device_detail_page.py  device_list_page.py  overview_page.py  page_manager.py  settings_page.py  sidebar.py
src/offline_event_detection/: README.md  __init__.py  __main__.py  runner.py
src/tests/: test_collector.py  test_pcap_check.py  test_pcap_time_series.py
ui/: Device_List.py  README.md  consent.py  consent_data_donation.md  consent_overall_risks.md  country_list.txt  donation_box.py  sidebar.py  start.bash  survey.py  template.py
ui/default/: README.md  package.json
ui/pages/: 1_Overview.py  2_Device_Details.py  (+1 more)
v1-src/: arp_scan.py  arp_spoof.py  data_upload.py  host_state.py  packet_capture.py  packet_processor.py  pcap_replay.py  print_code.sh  server_config.py  start_inspector.py  ui.py
v2-src/: arp_scan.py  arp_spoof.py  data_upload.py  deploy.sh  host_state.py  inspector.py  linux-install-dependencies.sh  linux-start-inspector.sh  netdisco.py  netdisco_wrapper.py  packet_capture.py  packet_processor.py  parse_available_ports.py  requirements.txt  server_config.py  start_inspector.bat  start_inspector.py  start_inspector.scpt  start_inspector_mac.spec  start_inspector_win.spec  utils.py  webserver.py
webapp/: device_details.py  device_list.py  navbar.py  overview.py  sidebar.py
(+774 files in other folders)
