[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "iot-inspector"
dynamic = ["version"]
description = "IoT Inspector Client for analyzing IoT device firmware"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "libinspector==1.0.10",
    "streamlit>=1.50.0",
]
authors = [
    { name = "Danny Huang", email = "dhuang@nyu.edu" },
    { name = "Andrew Quijano", email = "andrew.quijano@nyu.edu" }
]
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "libinspector",
    "libinspector.*"
]

[tool.setuptools.package-data]
libinspector = [
    "static/images/*.png",
    "data/*.json",
    ".streamlit/*.toml",
]

[tool.setuptools]
include-package-data = true

[project.urls]
Homepage = "https://inspector.engineering.nyu.edu/"
Source = "https://github.com/nyu-mlab/iot-inspector-client/"
Tracker = "https://github.com/nyu-mlab/iot-inspector-client/issues"