[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
# Add both 'src' (for your code) and 'tests'
pythonpath = [
  "tests",
]

# Optional: Add this to see your debug prints automatically without typing -s
addopts = "-s"

[project]
name = "iot-inspector"
dynamic = ["version"]
description = "IoT Inspector Client for analyzing IoT device firmware"
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
    "pandas==2.3.3",
    "flask==3.1.3",
    "pymongo==4.16.0",
    "python-dotenv==1.2.1",
    "libinspector>=1.0.17",
    "streamlit>=1.52.1",
    "gdown>=5.2.1",
    "matplotlib==3.10.8",
    "scipy==1.15.3",
    "statsmodels==0.14.4",
    "scikit-learn==1.7.0",
]
authors = [
    { name = "Danny Huang", email = "dhuang@nyu.edu" },
    { name = "Andrew Quijano", email = "andrew.quijano@nyu.edu" }
]
license = "Apache-2.0"
keywords = ["iot-inspector", "network-traffic-analysis", "network-monitoring", "iot-security"]
classifiers = [
    "Topic :: System :: Networking :: Monitoring",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English"
]

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "iot_inspector",
    "iot_inspector.*"
]

[tool.setuptools.package-data]
iot_inspector = [
    "static/images/*.png",
    "data/*.json",
    ".streamlit/*.toml",
]

[tool.setuptools]
include-package-data = true

[project.scripts]
anonymize = "iot_inspector.analysis.anonymize:main"
time_series = "iot_inspector.analysis.pcap_time_series:main"

[project.urls]
Homepage = "https://inspector.engineering.nyu.edu/"
Source = "https://github.com/nyu-mlab/iot-inspector-client/"
Tracker = "https://github.com/nyu-mlab/iot-inspector-client/issues"
Documentation = "https://github.com/nyu-mlab/iot-inspector-client/wiki"
Download = "https://github.com/nyu-mlab/iot-inspector-client/releases/latest"
